# sticker-app

./: README.md  button.py  color.py  file_manager.py  main.py  pyproject.toml  screen.py  sticker.py  widgets.py
